Update Coding-Standards.md (#482)
Add missing ` 70590171da01bd642a9c1ae31915678e4fff384c

--- a/2.6/range.html
+++ b/2.6/range.html
@@ -99,7 +99,7 @@ public RangeAttribute( double from, double to, double step );
 <div class="code"><pre class="prettyprint">
 [Test]
 public void MyTest(
-    [Values(1,2,3) int x,
+    [Values(1,2,3)] int x,
     [Range(0.2,0.6,0.2] double d)
 {
     ...
